# vq

./: .gitignore  .gitignore.orig  .zenodo.json  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  INSTALL  Jenkinsfile  LICENSE  README  README.md  astyle.rc  config.h.in  configure  vq_installer.bs
.github/workflows/: linux.yml
PyVQ/: __init__.py  setup.py
PyVQ/pyvq/: README_PYVQ.md  __init__.py  __init__.py~  pyvq.py
PyVQ/pyvq/betas/: __init__.py  __init__.py~  event_plots.py  greens.py  quick_look.py  readme.txt
PyVQ/pyvq_betas/: __init__.py  quick_look.py  readme.txt
doc/: cig_manual_cover_template.tex  citations.bib  vc.bib  vc.tex  vq.bib  vq.tex
doc/graphics/: VQFlow.odg  vq_flow.dot
docker/: Dockerfile  VQ_docker_description.md  entrypoint.sh
docker/virtualquake/: Dockerfile  README.md
docker/virtualquake-buildenv-bionic/: Dockerfile  README.md
docker/virtualquake-buildenv-xenial/: Dockerfile  README.md
examples/: CMakeLists.txt  check_results.py  example_params.prm  greens_generate.prm  greens_input.prm  pyvq.py  setup_params.sh  sum_greens.py
examples/ca_model/: gen_ca_model.sh
examples/diff_fault/: params.d  setup_mesh.sh  setup_params.sh
examples/fault_traces/: golden_gate.txt  multiple_fault_trace.txt  single_fault_trace.txt  two_fault_1.txt  two_fault_2.txt
examples/fault_traces/ca_traces/: trace_Anacapa-Dume.txt  trace_Antelope_Vlly.txt  trace_Anza.txt  trace_Arroyo-MRidge.txt  trace_B_Chan_Isle_Th.txt  trace_B_Elpark.txt  trace_B_Lagoon-Bld_M.txt  trace_B_Northridge.txt  trace_Bartlett_Spring.txt  trace_Battle_Creek.txt  trace_Berryessa.txt  trace_Bigpine.txt  trace_Birch_Ck.txt  trace_Blackwater.txt  trace_Borrego.txt  trace_Brawley.txt  trace_Bullion-Mesq.txt  trace_Burnt_Mtn.txt  trace_C_Maacama.txt  trace_Calaveras.txt  trace_Casmalia.txt  trace_Cedar_Mtn-Ma_M.txt  trace_Cerro_Prieto-N.txt  trace_Cerro_Prieto-S.txt  trace_Cerro_Prieto-W.txt  trace_Chino_Central.txt  trace_Clamshell.txt  trace_Cleghorn.txt  trace_Collayomi.txt  trace_Concord.txt  trace_Coyote_Cr.txt  trace_Coyote_Mt..txt  trace_Cucamonga.txt  (+142 more)
examples/single_fault/: params.d  setup_mesh.sh  setup_params.sh
examples/two_fault/: params.d  setup_mesh.sh  setup_params.sh
helper_scripts/: example_params.d  param_generation.py
pyvq/: README_PYVQ.md  pyvq.py
quakelib/: AUTHORS  CMakeLists.txt  COPYING  README  quakelib_config.h.in
quakelib/doc/: Doxyfile
quakelib/python/: CMakeLists.txt  __init__.py  quakelib.i
quakelib/src/: QuakeLib.h  QuakeLibEQSim.cpp  QuakeLibEQSim.h  QuakeLibElement.cpp  QuakeLibEvent.cpp  QuakeLibIO.cpp  QuakeLibIO.h  QuakeLibOkada.cpp  QuakeLibOkada.h  QuakeLibSectionParams.cpp  QuakeLibSlipEvent.cpp  QuakeLibSlipMap.cpp  QuakeLibUtil.cpp  QuakeLibUtil.h
quakelib/test/: CondUnitTest.py  EventUnitTest.py  FricUnitTest.py  GeomUnitTest.py  GreenUnitTest.py  MetadataUnitTest.py  OctreeTest.py  RectBoundTest.py  UtilUnitTest.py
sim_output/: tester.py
src/: CMakeLists.txt  main.cpp  mesher.cpp
src/core/: Block.cpp  Block.h  Comm.cpp  Comm.h  CommPartition.cpp  CommPartition.h  Event.cpp  Event.h  InitBlocks.cpp  InitBlocks.h  Params.cpp  Params.h  SimData.cpp  SimData.h  SimDataBlocks.cpp  SimDataBlocks.h  SimDataEvents.cpp  SimDataEvents.h  SimError.h  SimFramework.cpp  SimFramework.h  SimTimer.cpp  SimTimer.h  Simulation.cpp  Simulation.h  VCBlock.cpp  VCBlock.h  VCComm.cpp  VCComm.h  VCCommPartition.cpp  VCCommPartition.h  VCCommSpecExec.cpp  VCCommSpecExec.h  VCEvent.cpp  VCEvent.h  VCInitBlocks.cpp  VCInitBlocks.h  VCParams.cpp  VCParams.h  VCSimData.cpp  (+7 more)
src/io/: CheckpointFileOutput.cpp  CheckpointFileOutput.h  CheckpointFileParse.cpp  CheckpointFileParse.h  EqSimFileOutput.cpp  EqSimFileOutput.h  EqSimFileParse.cpp  EqSimFileParse.h  EventOutput.cpp  EventOutput.h  GreensFileOutput.cpp  GreensFileOutput.h  HDF5Data.cpp  HDF5Data.h  HDF5DataShare.cpp  HDF5DataShare.h  ReadModelFile.cpp  ReadModelFile.h  SystemFileOutput.cpp  SystemFileOutput.h
src/misc/: ConfigFile.cpp  ConfigFile.h  GreensFunctions.cpp  GreensFunctions.h  MPIDebugOutputStream.cpp  MPIDebugOutputStream.h
src/simulation/: AddAsperities.cpp  AddAsperities.h  AddNoise.cpp  AddNoise.h  BASSAftershocks.cpp  BASSAftershocks.h  BGPoissonEvents.cpp  BGPoissonEvents.h  BadFaultKill.cpp  BadFaultKill.h  BlockValCompute.cpp  BlockValCompute.h  DepthDepVelocity.cpp  DepthDepVelocity.h  EventRecorder.cpp  EventRecorder.h  GracefulQuit.cpp  GracefulQuit.h  GreensInit.cpp  GreensInit.h  GreensKillInteraction.cpp  GreensKillInteraction.h  ProgressMonitor.cpp  ProgressMonitor.h  RunEvent.cpp  RunEvent.h  SanityCheck.cpp  SanityCheck.h  UpdateBlockStress.cpp  UpdateBlockStress.h
test/: params.d
vc/: CMakeLists.txt  COPYING  INSTALL  README  configure
vc/quakelib/: CMakeLists.txt
vc/test/: run_test
vc/vc.xcodeproj/: project.pbxproj  sachs.mode1v3
vcal/: AUTHORS  README  config.h  config.h.in
vcal/new_vcal.xcodeproj/: eheien.mode1v3  eheien.pbxuser  msachs.mode1v3  msachs.pbxuser  project.pbxproj  sachs.pbxuser
vcal/quakelib/: AUTHORS  COPYING  README
vcal/quakelib/python/: CMakeLists.txt
vcal/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  main.cpp
vcal/src/core/: SimFramework.cpp  SimFramework.h  SimTimer.cpp  SimTimer.h  VCBlock.cpp  VCBlock.h  VCComm.cpp  VCComm.h  VCCommSpecExec.h  VCEvent.cpp  VCInitBlocks.cpp  VCParams.cpp  VCParams.h  VCSimData.cpp  VCSimData.h  VCSimDataEvents.h  VCSimulation.cpp
vcal/src/io/: CheckpointFileOutput.h  CheckpointFileParse.cpp  EqSimFileOutput.cpp  EqSimFileParse.cpp  GreensFileOutput.h  HDF5Data.cpp  HDF5Data.h  HDF5DataShare.cpp  SystemFileOutput.h
vcal/src/misc/: GreensFunctions.cpp  MPIDebugOutputStream.cpp  MPIDebugOutputStream.h
vcal/src/simulation/: AddNoise.cpp  BGPoissonEvents.cpp  BlockValCompute.h  DepthDepVelocity.h  EventRecorder.h  GracefulQuit.h  GreensInit.cpp  GreensKillInteraction.cpp  GreensKillInteraction.h  ProgressMonitor.h  RunEvent.cpp  RunEvent.h  UpdateBlockStress.cpp  UpdateBlockStress.h
vcal/vc.xcodeproj/: project.pbxproj
vcal/vcal.xcodeproj/: project.pbxproj
(+44 files in other folders)
