SET(CMAKE_SWIG_FLAGS "-I${QUAKELIB_SOURCE_DIR}")

# If we have SWIG, run the .i files through it
if(DEFINED PYTHON_INCLUDE_DIR AND DEFINED SWIG_FOUND)
    SET_SOURCE_FILES_PROPERTIES(quakelib.i PROPERTIES CPLUSPLUS ON)
    #SET_SOURCE_FILES_PROPERTIES(quakelib.i PROPERTIES SWIG_FLAGS "-includeall")
    SWIG_ADD_MODULE(quakelib python quakelib.i)
    SWIG_LINK_LIBRARIES(quakelib ${PYTHON_LIBRARIES} quakelib)
    EXECUTE_PROCESS(COMMAND python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
    FILE(COPY ${QUAKELIB_PYTHON_DIR}/__init__.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    INSTALL(TARGETS ${SWIG_MODULE_quakelib_REAL_NAME} LIBRARY DESTINATION ${PYTHON_SITE_PACKAGES}/quakelib/)
    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/quakelib.py DESTINATION ${PYTHON_SITE_PACKAGES}/quakelib/)
    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/__init__.py DESTINATION ${PYTHON_SITE_PACKAGES}/quakelib/)
endif(DEFINED PYTHON_INCLUDE_DIR AND DEFINED SWIG_FOUND)

